--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>José Victor</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -22,7 +23,9 @@
     </header>
     <main>
         <div class="about">
-            <h1>Sobre</h1>
+            <h1>
+                Sobre
+            </h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur quas corporis temporibus obcaecati mollitia porro itaque, consequuntur, expedita soluta doloribus, blanditiis minima praesentium unde. Voluptatibus totam animi sint placeat error.
             Veritatis nobis eveniet obcaecati repellendus velit voluptas tempora dolorem quis distinctio iure accusamus quae, molestiae inventore voluptatum ipsa fuga culpa exercitationem. Id nostrum explicabo dolorum quos recusandae, adipisci pariatur amet!
             Cumque, aperiam possimus ipsam ratione in pariatur perspiciatis necessitatibus harum, quos tempore qui autem magnam recusandae dicta animi officiis quis deserunt, aliquid saepe esse. Praesentium delectus perferendis voluptatibus ipsam ex?
