Atualização do texto sobre hobbies

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <div >
                     <h2 class="text-xl font-medium pb-4">Hobbies</h2>
-                    <p>No meu tempo livre gosto jogar, estudar, ver vídeos no yt e de vez enquando ler. Também gosto de brincar com meus gatos (tenho 7 kk).</p>
+                    <p>No meu tempo livre gosto jogar, estudar, ver vídeos no youtube e de vez enquando ler.</p>
                 </div>
             </div>
             <div class="flex flex-col gap-y-8 min-w-fit">
