--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <p>José Victor</p>
             </div>
             <ul class="flex gap-8 pr-1">
-                <li><a href="https://github.com/zoldyako">
+                <li><a href="https://github.com/zoldyako" target="_blank">
                     <p class="py-1 px-2 rounded-lg bg-slate-400 text-gray-800 hover:bg-slate-300">Github</p></a>
                 </li>
-                <li><a href="https://linkedin.com/jose-victor-dias-rodrigues">
+                <li><a href="https://linkedin.com/jose-victor-dias-rodrigues" target="_blank">
                     <p class="py-1 px-2 rounded-lg bg-slate-400 text-gray-800 hover:bg-slate-300"2>Linkedin</p></a>
                 </li>
             </ul>
@@ -66,7 +66,7 @@
         </div>
     </main>
     <footer class="bg-slate-500 p-2 sticky top-full text-center text-gray-300 m-4 rounded-lg">
-        <p><a href="https://github.com/zoldyako">Desenvolvido por José Victor</a></p>
+        <p><a href="https://github.com/zoldyako" target="_blank">Desenvolvido por José Victor</a></p>
     </footer>
 </body>
 </html>
