Concertado link para o linkedin

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="https://github.com/zoldyako" target="_blank">
                     <p class="py-1 px-2 rounded-lg bg-slate-400 text-gray-800 hover:bg-slate-300">Github</p></a>
                 </li>
-                <li><a href="https://linkedin.com/jose-victor-dias-rodrigues" target="_blank">
+                <li><a href="https://www.linkedin.com/in/jose-victor-dias-rodrigues/" target="_blank">
                     <p class="py-1 px-2 rounded-lg bg-slate-400 text-gray-800 hover:bg-slate-300"2>Linkedin</p></a>
                 </li>
             </ul>
